--- a/drupal/sites/all/themes/checkdesk/assets/scss/_report.scss
+++ b/drupal/sites/all/themes/checkdesk/assets/scss/_report.scss
@@ -158,6 +158,7 @@ $bh: $baseLineHeight/4;
 
 				.oembed-content {
 					@include ctb-clearfix;
+					display: block;
 				}
 				
 				.oembed-content img {
